# servo

contracts/: Validator.sol
p2/: package-lock.json  package.json
p2/src/: App.tsx  index.css
p2/src/components/: game.ts  player.ts  stick.ts
p2p-contract-solana/src/: lib.rs
p2p-solana/: package-lock.json  package.json
p2p-solana/components/: AsteroidController.ts  idl.json  player.ts  solana.ts
p2p-solana/pages/: _app.tsx  index.tsx
p2p-solana/styles/: globals.css
programs/p2p-contract-solana/: Cargo.toml
programs/p2p-contract-solana/src/: lib.rs
